# agmine

./: Cargo.toml  README.md
migrations/2023-09-13-190118_create_users/: up.sql
src/: main.rs
src/models/: schema.rs  user.rs
src/repository/: database.rs
src/routes/: users.rs
