[package]
name = "agmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.30", features = ["serde"] }
diesel = { version = "2.1.1", features = ["mysql", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
